<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/margin_bottom_trip"
    android:paddingBottom="@dimen/margin_bottom_trip"
    android:paddingLeft="@dimen/margin_bottom_trip"
    android:paddingRight="@dimen/margin_bottom_trip"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/textView_title"
        android:layout_centerHorizontal="true"
        style="@style/AppTheme.TextViewTitle"
        android:textSize="@dimen/text_view_size_dialog"
        android:text="@string/str_trip_start" />

    <EditText
        android:id="@+id/editText_trip_name"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textView_title"
        style="@style/AppTheme.SimpleACTextView"
        android:hint="@string/str_trip_name"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />
    <requestFocus />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_trip_name"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button_exit"
            style="@style/AppTheme.SimpleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_trip_exit"
            android:layout_marginRight="@dimen/trip_history_spacing"
            android:layout_marginEnd="@dimen/trip_history_spacing" />

        <Button
            android:id="@+id/button_start_trip"
            style="@style/AppTheme.SimpleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_start_trip"
            android:layout_marginLeft="@dimen/trip_history_spacing"
            android:layout_marginStart="@dimen/trip_history_spacing" />
    </LinearLayout>


</RelativeLayout>