<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_title"
                style="@style/AppTheme.TextViewTitle"
                android:text="@string/change_str" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_title">

                <EditText
                    android:id="@+id/username"
                    style="@style/AppTheme.SimpleACTextView"
                    android:hint="@string/prompt_username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true">
                    <requestFocus />
                </EditText>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_username">

                <EditText
                    android:id="@+id/email"
                    style="@style/AppTheme.SimpleACTextView"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    app:passwordToggleEnabled="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_email">

                <EditText
                    android:id="@+id/password"
                    style="@style/AppTheme.SimpleACTextView"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    app:passwordToggleEnabled="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_pass_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/til_pass">

                <EditText
                    android:id="@+id/password_again"
                    style="@style/AppTheme.SimpleACTextView"
                    android:hint="@string/prompt_password_again"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    app:passwordToggleEnabled="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                style="@style/AppTheme.SimpleButton"
                android:id="@+id/action_button_change"
                android:layout_below="@+id/til_pass_again"
                android:layout_marginTop="16dp"
                android:text="@string/action_change"
                android:textStyle="bold" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>