<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MenuActivity"
    android:background="@drawable/gradient">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <TextView
            style="@style/AppTheme.SimpleACTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/app_name"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginLeft="@dimen/button_margin" />

        <ImageButton
            android:id="@+id/btn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:foregroundGravity="right"
            android:src="@drawable/ic_settings"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/activity_vertical_margin"
            android:background="@color/colorPrimaryDark"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/button_settings_margin"
            android:layout_marginRight="@dimen/button_settings_margin" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/layout_button_trip"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_menu_size"
            android:background="@drawable/button_rounded"
            android:layout_margin="@dimen/button_settings_margin">

            <ImageView
                android:id="@+id/image_trip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_destination"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginStart="@dimen/button_margin" />

            <TextView
                android:id="@+id/textView_title_start_trip"
                style="@style/AppTheme.TextViewTitle"
                android:textSize="@dimen/text_view_size_menu"
                android:textColor="@color/colorPrimaryDark"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text="@string/btn_start_trip"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_button_group"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_menu_size"
            android:background="@drawable/button_rounded"
            android:layout_marginRight="@dimen/button_settings_margin"
            android:layout_marginLeft="@dimen/button_settings_margin">

            <TextView
                android:id="@+id/textView_title_my_group"
                style="@style/AppTheme.TextViewTitle"
                android:textSize="@dimen/text_view_size_menu"
                android:textColor="@color/colorPrimaryDark"
                android:layout_centerVertical="true"
                android:text="@string/btn_group"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_alignParentLeft="true" />

            <ImageView
                android:id="@+id/image_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_target_group"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_button_trip_list"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_menu_size"
            android:background="@drawable/button_rounded"
            android:layout_margin="@dimen/button_settings_margin">

            <ImageView
                android:id="@+id/image_trip_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_maps_and_flags"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginStart="@dimen/button_margin" />

            <TextView
                android:id="@+id/textView_title_my_trips"
                style="@style/AppTheme.TextViewTitle"
                android:textSize="@dimen/text_view_size_menu"
                android:textColor="@color/colorPrimaryDark"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text="@string/btn_trip_history"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>